Causeview Package Complete/ant script/retrieveUnpackaged/objects/Fund__c.object
<CustomObject>
    <description>Causeview - Captures your organization&apos;s funds.</description>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund_Category__c</fullName>
        <label>Fund Category</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fund_Code__c</fullName>
        <description>Used to code funds for reference.</description>
        <label>Fund Code</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Name__c</fullName>
        <label>Fund Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>General Ledger code used to reconcile with finace</description>
        <inlineHelpText>General Ledger code used to reconcile with finace</inlineHelpText>
        <label>GL Code</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GL_Credit__c</fullName>
        <label>GL - Cash - Credit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Debit__c</fullName>
        <label>GL - Cash - Debit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_In_Kind_Credit__c</fullName>
        <label>GL - In Kind - Credit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_In_Kind_Debit__c</fullName>
        <label>GL - In Kind - Debit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Cash_Credit__c</fullName>
        <label>GL Matching Pledge - Cash - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Cash_Debit__c</fullName>
        <label>GL Matching Pledge - Cash - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Current_Fiscal_Debit__c</fullName>
        <label>GL-Matching Pledge Installment-Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Current_Fiscal__c</fullName>
        <label>GL-Matching Pledge Installment-Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_In_Kind_Credit__c</fullName>
        <label>GL Matching Pledge - In Kind - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_In_Kind_Debit__c</fullName>
        <label>GL Matching Pledge - In Kind - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Property_Credit__c</fullName>
        <label>GL Matching Pledge - Property - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Property_Debit__c</fullName>
        <label>GL Matching Pledge - Property - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Stock_Credit__c</fullName>
        <label>GL Matching Pledge - Stock - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Stock_Debit__c</fullName>
        <label>GL Matching Pledge - Stock - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Write_off_Credit__c</fullName>
        <label>GL Matching Pledge - Write off - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Matching_Pledge_Write_off_Debit__c</fullName>
        <label>GL Matching Pledge - Write off - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Other_Credit__c</fullName>
        <label>GL - Other - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Other_Debit__c</fullName>
        <label>GL - Other - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Credit__c</fullName>
        <label>GL Pledge - Cash - Credit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Current_Fiscal_Credit__c</fullName>
        <label>GL - Pledge Installment - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Current_Fiscal_Debit__c</fullName>
        <label>GL - Pledge Installment - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Debit__c</fullName>
        <label>GL Pledge - Cash - Debit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_In_Kind_Credit__c</fullName>
        <label>GL Pledge - In Kind - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_In_Kind_Debit__c</fullName>
        <label>GL Pledge - In Kind - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Property_Credit__c</fullName>
        <label>GL Pledge - Property - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Property_Debit__c</fullName>
        <label>GL Pledge - Property - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Stock_Credit__c</fullName>
        <label>GL Pledge - Stock - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Stock_Debit__c</fullName>
        <label>GL Pledge - Stock - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Write_off_Credit__c</fullName>
        <label>GL Pledge - Write off - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Pledge_Write_off_Debit__c</fullName>
        <label>GL Pledge - Write off - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Property_Credit__c</fullName>
        <description>GL account code for Property Credit</description>
        <label>GL - Property - Credit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Property_Debit__c</fullName>
        <description>GL account code for Property Debit</description>
        <label>GL - Property - Debit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Recurring_Credit__c</fullName>
        <label>GL Recurring - Credit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Recurring_Debit__c</fullName>
        <label>GL Recurring - Debit</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Stock_Credit__c</fullName>
        <description>GL account code for Stock Credit</description>
        <label>GL - Stock - Credit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Stock_Debit__c</fullName>
        <description>GL account code for Stock Debit</description>
        <label>GL - Stock - Debit</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Fund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines Fund as a Parent - top level.</description>
        <inlineHelpText>Defines Fund as a Parent - top level.</inlineHelpText>
        <label>Is Parent Fund</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Goal__c</fullName>
        <label>Overall Goal</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Fund_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Parent_Fund__r.Id, Parent_Fund__r.Fund_Name__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Fund Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Fund__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to parent fund.</description>
        <label>Parent Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Child Funds</relationshipLabel>
        <relationshipName>Funds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Key__c</fullName>
        <description>Used for Salesforce search</description>
        <externalId>true</externalId>
        <label>Search Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unrestricted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporarily Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanently Restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fund_Name__c</columns>
        <columns>Fund_Category__c</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Fund ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IA00000023QO3MAM_00NA0000008hmdoMAA</fullName>
        <active>true</active>
        <field>Gift_Detail__c.Fund__c</field>
        <filterItems>
            <field>Fund__c.Inactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Allocation_Fund</name>
    </namedFilters>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>